# AI-Property-Management-Assistant

./: .env.example  README.md
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/routes/: auth.py  maintenance.py  properties.py  tenants.py
backend/src/core/: __init__.py  config.py  logging.py  security.py
backend/src/db/: __init__.py  connection.py
backend/src/models/: property.py  tenant.py  user.py
backend/src/repositories/: property_repository.py  tenant_repository.py
backend/src/services/: maintenance_service.py  property_service.py  tenant_service.py
backend/src/services/ai/: llm_client.py
backend/src/services/ai/prompts/: leasing.txt  maintenance.txt  rent_collection.txt
backend/src/utils/: __init__.py  pagination.py  validators.py
backend/tests/: test_ai.py  test_properties.py  test_tenants.py
frontend/: package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ChatAssistant.tsx  MaintenanceForm.tsx  PropertyList.tsx  TenantList.tsx
frontend/src/pages/: Dashboard.tsx  Maintenance.tsx  Properties.tsx  Tenants.tsx
frontend/src/services/: api.ts  auth.ts
infra/ci/: github-actions.yml
infra/docker/: backend.Dockerfile  docker-compose.yml
scripts/: dev.sh  seed_data.py  setup.sh
shared/schemas/: property.schema.json  tenant.schema.json
