[tool]
name = "ai-property-management-assistant"
version = "0.1.0"
description = "An AI-powered property management assistant."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
pydantic = "^1.8.2"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"